javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/Comparison.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class Comparison {

  public void TestComparison(){

    if(1.2 < 1) {

    }
    if(1 > 2) {

    }
    if(1.2 <= 1) {

    }
    if(1.2 >= 1) {

    }

  }
}
